--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-
+server:
+  port: 8888
+spring:
+  datasource:
+    # 数据库连接信息
+    url: jdbc:mysql://localhost:3306/engine
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  # 日期时间序列化格式
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
